--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-dragdata": "^2.3.1",
+    "lucide-react": "^0.446.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
